fix judderiness for user list collapsing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -687,7 +687,7 @@ hr {
 
 .user-list {
     padding: 0;
-    margin: 0 0 10px 0;
+    margin: 0 0 0 0;
     list-style: none;
     /* display: flex; */
     justify-content: flex-start;
